<resources>
    <string name="app_name">MultipleChoice</string>
    <string name="correct_message">选择正确</string>
    <string name="error_message">选择错误</string>
    <string name="question">下面哪个属于水果？</string>
    <string name="banana">香蕉</string>
    <string name="apple">苹果</string>
    <string name="wax_gourd">冬瓜</string>
    <string name="watermelon">西瓜</string>
    <string name="pumpkin">南瓜</string>
    <string name="grapes">葡萄</string>
    <string name="btn_submit">提交</string>
    
</resources>
